# email-generator

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
client/: Dockerfile  app.py  config.yaml  requirements.txt  settings.py
client/templates/: welcome_subscriber.py
src/: Dockerfile  requirements.txt
src/app/: main.py
src/app/api/: main.py
src/app/api/routes/: email.py
src/app/api/schemas/: email.py
src/app/core/: config.py
src/app/core/prompts/: welcome_subscriber_email.yaml  writing_style.yaml
src/app/crawlers/: base.py  langchain_crawler.py
src/app/llm/: email_writer.py
src/app/utils/: logger.py  prompt.py
tests/: test_crawlers.py  test_email_writer.py
